Docs menu alignment issue fixed.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -712,6 +712,10 @@ a.urlPath:hover{
 main .padding-bottom--lg article.col:first-child{
   padding: 0 var(--ifm-spacing-horizontal)  !important;
 }
+.docs{
+  position: relative;
+  top: -3px;
+}
 @media screen and (max-width: 550px) and (min-width: 320px) {
   nav.navbar--fixed-top{
       height: 85px;
